# Jewelry

./: CMakeLists.txt  Ring2_StoneHold_Size_20mm.stl
CatalagueCreator/: BackgroundRemover.py  CatalagueCreator.py  CatalagueInfoCreator.py  CatalagueInfoCreator_STL.py  EarringPendantImageCropper.py  PdfCatalagueCreator.py  Readme
src/: RingNamer.cpp
